#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

MP-2009-11-06-0: Enhancem.:  o jsv.pm does not recognize -A option when used 
                               with qsub, test added for IZ 3151
                 Review:     CR

RH-2009-11-06-0: Enhancem.:  Hedeby: 
                             o wait_for_notification enhanced, fixed and
                               cleaned it supports now different modes (ingore
                               unexpected events, strict/non strict event order)
                             o get_history has now opt argument
                 Review:     MG
                   
MP-2009-11-05-0: Enhancem.:  o added automated reprioritization test
                 Review:     JG

SH-2009-11-05-0: Enhancem.:  o set_config_and_propagate should wait till the 
                               global configs are also propagate to the client
                 Bugfix:     o fixed 1914 issue test
                 Belongs to: CR-2009-11-05-0
                 Review:     CR

CR-2009-11-05-0: Bugfix:     o fixed 1914 issue test
                             o fixed set_config_and_propagate() 
                 Cleanup:    o a few smaller cleanups
                 Review:     SH

CR-2009-11-04-0: Cleanup:    o fixed complex reset handling in various tests
                 Enhancem.:  o new procedure reset_complex()
                 Review:     SH

TB-2009-11-03-0: Bugfix:     o added dependency on hedeby_install for issue
                               tests: 554, 582
                 Review:     RH

TB-2009-11-02-0: Enhancem.:  o added SDM test for cloud adapter: